--- a/wp-content/themes/flieber/src/styles/pages/home.scss
+++ b/wp-content/themes/flieber/src/styles/pages/home.scss
@@ -104,6 +104,92 @@ section.feature {
   }
 }
 
+section.videos {
+  background: #273042;
+
+  .container {
+    height: 100%;
+    position: relative;
+  }
+
+  .content {
+    align-items: flex-end;
+    display: grid;
+    grid-template-columns: 80% 20%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      max-width: 100%;
+    }
+  }
+
+  .videos__text {
+    color: #fff;
+    font-size: 18px;
+    height: auto;
+    line-height: 34px;
+    position: absolute;
+    right: 40px;
+    top: 85px;
+    width: 300px;
+    z-index: 1;
+
+    span {
+      color: $secondary-color;
+      display: block;
+      font-family: $second-font;
+      font-size: 28px;
+      margin-bottom: 40px;
+      padding-left: 15px;
+    }
+
+    &:before {
+      background: $secondary-color;
+      content: "";
+      height: 2px;
+      left: -50px;
+      position: absolute;
+      top: -20px;
+      transform: rotate(-25deg);
+      width: 100px;
+    }
+  }
+
+  .slider-nav {
+    padding: 35px;
+  }
+
+  // DOTS
+  .slick-dots {
+    display: block !important;
+    list-style: none;
+    margin-top: 30px;
+    padding: 0;
+
+    li {
+      display: inline-block;
+      margin: 0 8px;
+    }
+
+    .slick-active {
+      button {
+        background: $primary-color;
+      }
+    }
+
+    button {
+      background: #ffffff;
+      border: none;
+      font-size: 0;
+      height: 3px;
+      padding: 0;
+      width: 50px;
+    }
+  }
+}
+
 section.advantages {
   padding-top: 100px;
   background: linear-gradient(
@@ -371,17 +457,94 @@ section.blog {
       }
     }
 
-    &__content {
-      display: grid;
+    &__mask {
+      position: relative;
 
-      div {
-        background: red;
+      &:before {
+        background: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0%),
+          rgba(255, 255, 255, 0.8%)
+        );
+        content: "";
+        height: 100%;
+        position: absolute;
+        right: 0;
+        width: 35%;
+        z-index: 1;
+      }
+    }
+
+    &__content {
+      display: none;
+
+      flex-direction: column;
+      height: 700px;
+      flex-wrap: wrap;
+      overflow-y: scroll;
+
+      & > div {
+        align-self: flex-start;
       }
 
       &.active {
-        display: block;
+        display: flex;
       }
-      display: none;
+    }
+
+    &__post {
+      padding: 30px;
+      position: relative;
+      max-width: 360px;
+
+      h3 {
+        color: $secondary-color;
+        font-family: $second-font;
+        font-size: 24px;
+        font-weight: 500;
+        margin-bottom: 20px;
+      }
+
+      p {
+        color: #858a8f;
+        display: none;
+        font-size: 16px;
+        line-height: 22px;
+        margin-bottom: 20px;
+      }
+
+      a {
+        color: $secondary-color;
+        display: none;
+        text-decoration: underline;
+        text-transform: lowercase;
+      }
+
+      div {
+        background: $secondary-color;
+        color: #fff;
+        display: block;
+        margin-bottom: 20px;
+        margin-left: 35px;
+        margin-top: -18px;
+        padding: 5px 10px;
+        text-transform: uppercase;
+        position: relative;
+        width: max-content;
+      }
+
+      img {
+        width: 100%;
+      }
+
+      &:nth-child(3n + 1) {
+        max-width: 660px;
+
+        p,
+        a {
+          display: block;
+        }
+      }
     }
   }
 }
