--- a/wp-content/themes/flieber/style.css
+++ b/wp-content/themes/flieber/style.css
@@ -705,6 +705,68 @@ section.feature {
       padding: 0;
       width: 50px; }
 
+section.videos {
+  background: #273042; }
+  section.videos .container {
+    height: 100%;
+    position: relative; }
+  section.videos .content {
+    -webkit-box-align: end;
+            align-items: flex-end;
+    display: grid;
+    grid-template-columns: 80% 20%;
+    height: 100%; }
+    section.videos .content img {
+      width: 100%;
+      height: 100%;
+      max-width: 100%; }
+  section.videos .videos__text {
+    color: #fff;
+    font-size: 18px;
+    height: auto;
+    line-height: 34px;
+    position: absolute;
+    right: 40px;
+    top: 85px;
+    width: 300px;
+    z-index: 1; }
+    section.videos .videos__text span {
+      color: #2ea6d0;
+      display: block;
+      font-family: "Keep Calm Med", "Helvetica Neue", Arial, sans-serif;
+      font-size: 28px;
+      margin-bottom: 40px;
+      padding-left: 15px; }
+    section.videos .videos__text:before {
+      background: #2ea6d0;
+      content: "";
+      height: 2px;
+      left: -50px;
+      position: absolute;
+      top: -20px;
+      -webkit-transform: rotate(-25deg);
+              transform: rotate(-25deg);
+      width: 100px; }
+  section.videos .slider-nav {
+    padding: 35px; }
+  section.videos .slick-dots {
+    display: block !important;
+    list-style: none;
+    margin-top: 30px;
+    padding: 0; }
+    section.videos .slick-dots li {
+      display: inline-block;
+      margin: 0 8px; }
+    section.videos .slick-dots .slick-active button {
+      background: #19254f; }
+    section.videos .slick-dots button {
+      background: #ffffff;
+      border: none;
+      font-size: 0;
+      height: 3px;
+      padding: 0;
+      width: 50px; }
+
 section.advantages {
   padding-top: 100px;
   background: -webkit-gradient(linear, right bottom, left top, from(#fff), color-stop(50%, #fff), color-stop(50%, #273042), to(#273042));
@@ -915,12 +977,71 @@ section.blog {
           left: 0;
           position: absolute;
           width: 100%; }
+  section.blog .blog__mask {
+    position: relative; }
+    section.blog .blog__mask:before {
+      background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.8)));
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.8));
+      content: "";
+      height: 100%;
+      position: absolute;
+      right: 0;
+      width: 35%;
+      z-index: 1; }
   section.blog .blog__content {
-    display: grid;
-    display: none; }
-    section.blog .blog__content div {
-      background: red; }
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    height: 700px;
+    flex-wrap: wrap;
+    overflow-y: scroll; }
+    section.blog .blog__content > div {
+      align-self: flex-start; }
     section.blog .blog__content.active {
-      display: block; }
+      display: -webkit-box;
+      -js-display: flex;
+      display: flex; }
+  section.blog .blog__post {
+    padding: 30px;
+    position: relative;
+    max-width: 360px; }
+    section.blog .blog__post h3 {
+      color: #2ea6d0;
+      font-family: "Keep Calm Med", "Helvetica Neue", Arial, sans-serif;
+      font-size: 24px;
+      font-weight: 500;
+      margin-bottom: 20px; }
+    section.blog .blog__post p {
+      color: #858a8f;
+      display: none;
+      font-size: 16px;
+      line-height: 22px;
+      margin-bottom: 20px; }
+    section.blog .blog__post a {
+      color: #2ea6d0;
+      display: none;
+      text-decoration: underline;
+      text-transform: lowercase; }
+    section.blog .blog__post div {
+      background: #2ea6d0;
+      color: #fff;
+      display: block;
+      margin-bottom: 20px;
+      margin-left: 35px;
+      margin-top: -18px;
+      padding: 5px 10px;
+      text-transform: uppercase;
+      position: relative;
+      width: -webkit-max-content;
+      width: -moz-max-content;
+      width: max-content; }
+    section.blog .blog__post img {
+      width: 100%; }
+    section.blog .blog__post:nth-child(3n + 1) {
+      max-width: 660px; }
+      section.blog .blog__post:nth-child(3n + 1) p,
+      section.blog .blog__post:nth-child(3n + 1) a {
+        display: block; }
 
 /*# sourceMappingURL=style.css.map */
