--- a/wp-content/themes/flieber/src/styles/pages/home.scss
+++ b/wp-content/themes/flieber/src/styles/pages/home.scss
@@ -2,548 +2,413 @@
 
 @import "slick-carousel/slick/slick.scss";
 
-section.feature {
-  background: $secondary-color;
-  height: 100vh;
-  max-height: 100%;
-  padding-top: 70px;
+.home {
+  section.feature {
+    background: $secondary-color;
+    height: 100vh;
+    max-height: 100%;
 
-  .container {
-    height: 100%;
-  }
-
-  .content {
-    align-items: center;
-    display: grid;
-    grid-template-columns: 40% 60%;
-    height: 100%;
-  }
-
-  .slider-nav {
-    h2 {
-      color: $primary-color;
-      font-family: $second-font;
-      font-size: 35px;
-      line-height: 44px;
-      margin-bottom: 20px;
-    }
-
-    p {
-      color: #fff;
-      font-size: 22px;
-      line-height: 30px;
-      margin-bottom: 20px;
-    }
-
-    button {
-      background: #19254f;
-      border: 0;
-      border-radius: 50px;
-      color: #fff;
-      display: block;
-      font-size: 16px;
-      font-weight: bold;
-      padding: 15px 30px;
-      text-transform: uppercase;
-    }
-  }
-
-  .slider-mask {
-    align-items: flex-end;
-    background: transparent url("./images/features/moldura_macbook.png") bottom
-      center no-repeat;
-    background-size: 100% 100%;
-  }
-
-  .slider-for {
-    margin: 0 auto 37px;
-    height: 100%;
-    max-height: 510px;
-    max-width: 86%;
-    padding-top: 4px;
-    width: 100%;
-
-    & > div {
+    .container {
       height: 100%;
-      max-height: 510px;
     }
 
-    img {
-      width: 100%;
+    .content {
+      align-items: center;
+      display: grid;
+      grid-template-columns: 40% 60%;
       height: 100%;
-      max-width: 100%;
-    }
-  }
-
-  // DOTS
-  .slick-dots {
-    display: block !important;
-    list-style: none;
-    margin-top: 30px;
-    padding: 0;
-
-    li {
-      display: inline-block;
-      margin: 0 8px;
     }
 
-    .slick-active {
-      button {
-        background: $primary-color;
-      }
-    }
-
-    button {
-      background: #ffffff;
-      border: none;
-      font-size: 0;
-      height: 3px;
-      padding: 0;
-      width: 50px;
-    }
-  }
-}
-
-section.videos {
-  background: #273042;
-
-  .container {
-    height: 100%;
-    position: relative;
-  }
-
-  .content {
-    align-items: flex-end;
-    display: grid;
-    grid-template-columns: 80% 20%;
-    height: 100%;
-
-    img {
-      width: 100%;
-      height: 100%;
-      max-width: 100%;
-    }
-  }
-
-  .videos__text {
-    color: #fff;
-    font-size: 18px;
-    height: auto;
-    line-height: 34px;
-    position: absolute;
-    right: 40px;
-    top: 85px;
-    width: 300px;
-    z-index: 1;
-
-    span {
-      color: $secondary-color;
-      display: block;
-      font-family: $second-font;
-      font-size: 28px;
-      margin-bottom: 40px;
-      padding-left: 15px;
-    }
-
-    &:before {
-      background: $secondary-color;
-      content: "";
-      height: 2px;
-      left: -50px;
-      position: absolute;
-      top: -20px;
-      transform: rotate(-25deg);
-      width: 100px;
-    }
-  }
-
-  .slider-nav {
-    padding: 35px;
-  }
-
-  // DOTS
-  .slick-dots {
-    display: block !important;
-    list-style: none;
-    margin-top: 30px;
-    padding: 0;
-
-    li {
-      display: inline-block;
-      margin: 0 8px;
-    }
-
-    .slick-active {
-      button {
-        background: $primary-color;
-      }
-    }
-
-    button {
-      background: #ffffff;
-      border: none;
-      font-size: 0;
-      height: 3px;
-      padding: 0;
-      width: 50px;
-    }
-  }
-}
-
-section.advantages {
-  padding-top: 100px;
-  background: linear-gradient(
-    to top left,
-    #fff 0%,
-    #fff 50%,
-    #273042 50%,
-    #273042 100%
-  );
-
-  .container {
-    max-width: 1200px;
-  }
-
-  h2 {
-    color: $secondary-color;
-    font-size: 34px;
-  }
-
-  .text {
-    color: #fff;
-    font-size: 20px;
-    line-height: 32px;
-    margin-bottom: 55px;
-    max-width: 55%;
-  }
-
-  .content {
-    align-items: stretch;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 50px;
-  }
-
-  .box {
-    background: #fff;
-    box-shadow: 0px 50px 35px -25px rgba(0, 0, 0, 0.5);
-    padding: 30px 35px;
-    text-align: center;
-
-    img {
-      margin-bottom: 15px;
-    }
-
-    h3 {
-      color: $secondary-color;
-      font-size: 36px;
-      margin-bottom: 15px;
-    }
-
-    p {
-      color: $text;
-      font-size: 20px;
-    }
-  }
-
-  .button {
-    background: #19254f;
-    border-radius: 50px;
-    color: #fff;
-    display: block;
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 18px;
-    margin: 150px auto 50px;
-    padding: 20px 40px;
-    text-transform: uppercase;
-  }
-}
-
-section.marcas {
-  padding: 100px 0;
-
-  .content {
-    align-items: center;
-    display: flex;
-    justify-content: space-around;
-  }
-}
-
-section.depoiments {
-  .container {
-    padding: 0;
-  }
-
-  .content {
-    align-items: center;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    height: 100%;
-  }
-
-  .slider-nav {
-    img {
-      width: 100%;
-    }
-  }
-
-  .slider-for {
-    align-items: center;
-    align-self: stretch;
-    background: #eceef0;
-    display: flex;
-    margin-top: 7%;
-  }
-
-  .depoiments__item {
-    padding: 0 50px;
-    p {
-      color: #858a8f;
-      font-size: 26px;
-      line-height: 34px;
-      margin-bottom: 20px;
-    }
-
-    h3 {
-      color: $secondary-color;
-      font-size: 14px;
-      margin-bottom: 10px;
-    }
-
-    h4 {
-      color: $primary-color;
-      font-size: 15px;
-    }
-  }
-}
-
-section.transports {
-  .container {
-    padding: 0;
-  }
-
-  .content {
-    align-items: center;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    height: 100%;
-  }
-
-  .slider-for {
-    img {
-      width: 100%;
-    }
-  }
-
-  .slider-nav {
-    align-items: center;
-    align-self: stretch;
-    background: rgba(25, 37, 79, 0.3) url("./images/transports/bg.png") center
-      left no-repeat;
-    background-size: cover;
-    display: flex;
-    flex-flow: wrap-reverse;
-  }
-
-  .transports__item {
-    padding: 0 15%;
-    p {
-      color: #babdc3;
-      font-size: 18px;
-      line-height: 34px;
-      margin-bottom: 50px;
-    }
-
-    h3 {
-      color: $secondary-color;
-      font-family: $second-font;
-      font-size: 44px;
-      font-weight: 500;
-      margin-bottom: 30px;
-    }
-
-    button {
-      background: $secondary-color;
-      border: 0;
-      border-radius: 50px;
-      color: $primary-color;
-      display: block;
-      font-size: 16px;
-      font-weight: bold;
-      padding: 10px 40px;
-      text-transform: uppercase;
-    }
-  }
-
-  .slick-dots {
-    align-items: center;
-    border-bottom: 1px solid #535a67;
-    display: flex !important;
-    flex-direction: row;
-    margin-left: 15%;
-    width: 100%;
-
-    li {
-      position: relative;
-    }
-
-    .slick-active {
-      button {
-        color: $secondary-color;
-      }
-
-      &:before {
-        background: $secondary-color;
-        bottom: -1px;
-        content: "";
-        height: 1px;
-        left: 0;
-        position: absolute;
-        width: 100%;
-      }
-    }
-
-    button {
-      background: transparent;
-      border: none;
-      color: #535a67;
-      padding: 15px;
-    }
-  }
-}
-
-section.blog {
-  padding: 70px 0;
-
-  .blog {
-    &__top {
-      align-items: flex-end;
-      display: flex;
-      justify-content: space-between;
-
+    .slider-nav {
       h2 {
         color: $primary-color;
         font-family: $second-font;
-        font-size: 28px;
-        font-weight: 500;
-        width: 20%;
-      }
-    }
-
-    &__tabs {
-      border-bottom: 1px solid #e0e1e2;
-      text-align: right;
-      width: 100%;
-      a {
-        color: #858a8f;
-        display: inline-block;
-        padding: 15px;
-        position: relative;
-
-        &.active {
-          color: $primary-color;
-
-          &:before {
-            background: $primary-color;
-            bottom: -1px;
-            content: "";
-            height: 1px;
-            left: 0;
-            position: absolute;
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    &__mask {
-      position: relative;
-
-      &:before {
-        background: linear-gradient(
-          90deg,
-          rgba(255, 255, 255, 0%),
-          rgba(255, 255, 255, 0.8%)
-        );
-        content: "";
-        height: 100%;
-        position: absolute;
-        right: 0;
-        width: 35%;
-        z-index: 1;
-      }
-    }
-
-    &__content {
-      display: none;
-
-      flex-direction: column;
-      height: 700px;
-      flex-wrap: wrap;
-      overflow-y: scroll;
-
-      & > div {
-        align-self: flex-start;
-      }
-
-      &.active {
-        display: flex;
-      }
-    }
-
-    &__post {
-      padding: 30px;
-      position: relative;
-      max-width: 360px;
-
-      h3 {
-        color: $secondary-color;
-        font-family: $second-font;
-        font-size: 24px;
-        font-weight: 500;
+        font-size: 35px;
+        line-height: 44px;
         margin-bottom: 20px;
       }
 
       p {
-        color: #858a8f;
-        display: none;
-        font-size: 16px;
-        line-height: 22px;
+        color: #fff;
+        font-size: 22px;
+        line-height: 30px;
         margin-bottom: 20px;
       }
 
-      a {
-        color: $secondary-color;
-        display: none;
-        text-decoration: underline;
-        text-transform: lowercase;
-      }
-
-      div {
-        background: $secondary-color;
+      button {
+        background: #19254f;
+        border: 0;
+        border-radius: 50px;
         color: #fff;
         display: block;
-        margin-bottom: 20px;
-        margin-left: 35px;
-        margin-top: -18px;
-        padding: 5px 10px;
+        font-size: 16px;
+        font-weight: bold;
+        padding: 15px 30px;
         text-transform: uppercase;
-        position: relative;
-        width: max-content;
+      }
+    }
+
+    .slider-mask {
+      align-items: flex-end;
+      background: transparent url("./images/features/moldura_macbook.png")
+        bottom center no-repeat;
+      background-size: 100% 100%;
+    }
+
+    .slider-for {
+      margin: 0 auto 37px;
+      height: 100%;
+      max-height: 510px;
+      max-width: 86%;
+      padding-top: 4px;
+      width: 100%;
+
+      & > div {
+        height: 100%;
+        max-height: 510px;
       }
 
       img {
         width: 100%;
+        height: 100%;
+        max-width: 100%;
+      }
+    }
+
+    // DOTS
+    .slick-dots {
+      display: block !important;
+      list-style: none;
+      margin-top: 30px;
+      padding: 0;
+
+      li {
+        display: inline-block;
+        margin: 0 8px;
       }
 
-      &:nth-child(3n + 1) {
-        max-width: 660px;
-
-        p,
-        a {
-          display: block;
+      .slick-active {
+        button {
+          background: $primary-color;
         }
+      }
+
+      button {
+        background: #ffffff;
+        border: none;
+        font-size: 0;
+        height: 3px;
+        padding: 0;
+        width: 50px;
+      }
+    }
+  }
+
+  section.videos {
+    background: #273042;
+
+    .container {
+      height: 100%;
+      position: relative;
+    }
+
+    .content {
+      align-items: flex-end;
+      display: grid;
+      grid-template-columns: 80% 20%;
+      height: 100%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+      }
+    }
+
+    .videos__text {
+      color: #fff;
+      font-size: 18px;
+      height: auto;
+      line-height: 34px;
+      position: absolute;
+      right: 40px;
+      top: 85px;
+      width: 300px;
+      z-index: 1;
+
+      span {
+        color: $secondary-color;
+        display: block;
+        font-family: $second-font;
+        font-size: 28px;
+        margin-bottom: 40px;
+        padding-left: 15px;
+      }
+
+      &:before {
+        background: $secondary-color;
+        content: "";
+        height: 2px;
+        left: -50px;
+        position: absolute;
+        top: -20px;
+        transform: rotate(-25deg);
+        width: 100px;
+      }
+    }
+
+    .slider-nav {
+      padding: 35px;
+    }
+
+    // DOTS
+    .slick-dots {
+      display: block !important;
+      list-style: none;
+      margin-top: 30px;
+      padding: 0;
+
+      li {
+        display: inline-block;
+        margin: 0 8px;
+      }
+
+      .slick-active {
+        button {
+          background: $primary-color;
+        }
+      }
+
+      button {
+        background: #ffffff;
+        border: none;
+        font-size: 0;
+        height: 3px;
+        padding: 0;
+        width: 50px;
+      }
+    }
+  }
+
+  section.advantages {
+    padding-top: 100px;
+    background: linear-gradient(
+      to top left,
+      #fff 0%,
+      #fff 50%,
+      #273042 50%,
+      #273042 100%
+    );
+
+    .container {
+      max-width: 1200px;
+    }
+
+    h2 {
+      color: $secondary-color;
+      font-size: 34px;
+    }
+
+    .text {
+      color: #fff;
+      font-size: 20px;
+      line-height: 32px;
+      margin-bottom: 55px;
+      max-width: 55%;
+    }
+
+    .content {
+      align-items: stretch;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 50px;
+    }
+
+    .box {
+      background: #fff;
+      box-shadow: 0px 50px 35px -25px rgba(0, 0, 0, 0.5);
+      padding: 30px 35px;
+      text-align: center;
+
+      img {
+        margin-bottom: 15px;
+      }
+
+      h3 {
+        color: $secondary-color;
+        font-size: 36px;
+        margin-bottom: 15px;
+      }
+
+      p {
+        color: $text;
+        font-size: 20px;
+      }
+    }
+
+    .button {
+      background: #19254f;
+      border-radius: 50px;
+      color: #fff;
+      display: block;
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 18px;
+      margin: 150px auto 50px;
+      padding: 20px 40px;
+      text-transform: uppercase;
+    }
+  }
+
+  section.marcas {
+    padding: 100px 0;
+
+    .content {
+      align-items: center;
+      display: flex;
+      justify-content: space-around;
+    }
+  }
+
+  section.depoiments {
+    .container {
+      padding: 0;
+    }
+
+    .content {
+      align-items: center;
+      display: grid;
+      grid-template-columns: 50% 50%;
+      height: 100%;
+    }
+
+    .slider-nav {
+      img {
+        width: 100%;
+      }
+    }
+
+    .slider-for {
+      align-items: center;
+      align-self: stretch;
+      background: #eceef0;
+      display: flex;
+      margin-top: 7%;
+    }
+
+    .depoiments__item {
+      padding: 0 50px;
+      p {
+        color: #858a8f;
+        font-size: 26px;
+        line-height: 34px;
+        margin-bottom: 20px;
+      }
+
+      h3 {
+        color: $secondary-color;
+        font-size: 14px;
+        margin-bottom: 10px;
+      }
+
+      h4 {
+        color: $primary-color;
+        font-size: 15px;
+      }
+    }
+  }
+
+  section.transports {
+    .container {
+      padding: 0;
+    }
+
+    .content {
+      align-items: center;
+      display: grid;
+      grid-template-columns: 50% 50%;
+      height: 100%;
+    }
+
+    .slider-for {
+      img {
+        width: 100%;
+      }
+    }
+
+    .slider-nav {
+      align-items: center;
+      align-self: stretch;
+      background: rgba(25, 37, 79, 0.3) url("./images/transports/bg.png") center
+        left no-repeat;
+      background-size: cover;
+      display: flex;
+      flex-flow: wrap-reverse;
+    }
+
+    .transports__item {
+      padding: 0 15%;
+      p {
+        color: #babdc3;
+        font-size: 18px;
+        line-height: 34px;
+        margin-bottom: 50px;
+      }
+
+      h3 {
+        color: $secondary-color;
+        font-family: $second-font;
+        font-size: 44px;
+        font-weight: 500;
+        margin-bottom: 30px;
+      }
+
+      button {
+        background: $secondary-color;
+        border: 0;
+        border-radius: 50px;
+        color: $primary-color;
+        display: block;
+        font-size: 16px;
+        font-weight: bold;
+        padding: 10px 40px;
+        text-transform: uppercase;
+      }
+    }
+
+    .slick-dots {
+      align-items: center;
+      border-bottom: 1px solid #535a67;
+      display: flex !important;
+      flex-direction: row;
+      margin-left: 15%;
+      width: 100%;
+
+      li {
+        position: relative;
+      }
+
+      .slick-active {
+        button {
+          color: $secondary-color;
+        }
+
+        &:before {
+          background: $secondary-color;
+          bottom: -1px;
+          content: "";
+          height: 1px;
+          left: 0;
+          position: absolute;
+          width: 100%;
+        }
+      }
+
+      button {
+        background: transparent;
+        border: none;
+        color: #535a67;
+        padding: 15px;
       }
     }
   }
