--- a/wp-content/themes/flieber/src/styles/style.scss
+++ b/wp-content/themes/flieber/src/styles/style.scss
@@ -6,5 +6,7 @@
 @import "./components/container";
 @import "./components/header";
 @import "./components/footer";
+@import "./components/tabs";
 
 @import "./pages/home";
+@import "./pages/resources";
